--- a/file-6/creative-portfolio/src/Pages/website.css
+++ b/file-6/creative-portfolio/src/Pages/website.css
@@ -7,6 +7,9 @@
   font-size: 22px;
   font-weight: 400;
   display: inline-block;
+  @media screen and (max-width: 571px) {
+    margin: 25px 0 25px 40px;
+  }
 }
 
 .top-left-text > span {
@@ -67,6 +70,7 @@ header {
   margin-left: 60px;
   @media screen and (max-width: 1200px) {
     flex: 100%;
+    margin-left: 0;
   }
 }
 
@@ -79,5 +83,7 @@ header {
   margin-bottom: 20px;
   @media screen and (max-width: 1200px) {
     flex: 100%;
+    margin: 0 20px 20px;
+    padding: 0;
   }
 }
